--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.iBeiKe.InfoPortal"
       android:versionCode="3"
-      android:versionName="1.1.preview"
+      android:versionName="1.1"
       android:installLocation="auto">
   	<uses-sdk android:minSdkVersion="8"
         android:targetSdkVersion="10"/>
