--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,8 +26,8 @@
 		<meta-data android:name="android.appwidget.provider" 
 				android:resource="@xml/widget_info" />
 		</receiver>
-        
-        <activity android:name=".Initialize"
+		
+        <activity android:name=".update.Initialize"
         		android:label="@string/initialize_title"
         		android:theme="@android:style/Theme.Dialog">
         </activity>
