--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -49,6 +49,11 @@
         		android:theme="@android:style/Theme.NoTitleBar">
         </activity>
         
+        <activity android:name=".lib.LibSearch"
+                  android:label="@string/about_title"
+				  android:theme="@android:style/Theme.Dialog">
+        </activity>
+        
         <activity android:name=".news.News"
                   android:label="@string/app_name">
         </activity>
