--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:targetSdkVersion="10"/>
     <application android:icon="@drawable/ibeike" android:label="@string/app_name"
     	android:theme="@android:style/Theme.NoTitleBar">
-        <activity android:name=".InfoPortal"
+        <activity android:name=".Initialize"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,8 +27,8 @@
 				android:resource="@xml/widget_info" />
 		</receiver>
 		
-        <activity android:name=".update.Initialize"
-        		android:label="@string/initialize_title"
+        <activity android:name=".InfoPortal"
+        		android:label="@string/app_name"
         		android:theme="@android:style/Theme.NoTitleBar">
         </activity>
         
@@ -46,6 +46,10 @@
         </activity>
         
         <activity android:name=".lib.Library"
+        		android:theme="@android:style/Theme.NoTitleBar">
+        </activity>
+        
+        <activity android:name=".lib.BookSearch"
         		android:theme="@android:style/Theme.NoTitleBar">
         </activity>
         
