Add RoomSearch, now can search room to get room's info. Layout still need to be fixed.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -41,7 +41,7 @@
         </activity>
         
         <activity android:name=".classes.RoomSearch"
-        		android:label="@string/search_room"
+        		android:label="@string/room_search"
         		android:theme="@android:style/Theme.Dialog">
         </activity>
         
