--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -58,6 +58,10 @@
 				  android:theme="@android:style/Theme.Dialog">
         </activity>
         
+        <activity android:name=".campus.Campus"
+				  android:theme="@android:style/Theme.NoTitleBar">
+        </activity>
+        
         <activity android:name=".news.News"
                   android:label="@string/app_name">
         </activity>
