--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
       android:versionName="1.1"
       android:installLocation="auto">
   	<uses-sdk android:minSdkVersion="8"
-        android:targetSdkVersion="16"/>
+        android:targetSdkVersion="15"/>
     <application android:icon="@drawable/ibeike" android:label="@string/app_name"
     	android:theme="@android:style/Theme.NoTitleBar">
         <activity android:name=".Initial"
@@ -67,6 +67,10 @@
         </activity>
         
         <activity android:name=".news.advise"
+                  android:label="@string/app_name">
+        </activity>
+        
+        <activity android:name=".teach.Teach"
                   android:label="@string/app_name">
         </activity>
         
